--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,5 +1,5 @@
 {
-    "githubUsername": "huya",
+    "githubUsername": "huya1121",
     "blogTitle": "Laziji",
     "blogDescribe": "欢迎来到Huyal的个人博客。",
     "htmlTitle": "Huyal的博客",
