--- a/static/configuration.json
+++ b/static/configuration.json
@@ -1,6 +1,6 @@
 {
     "githubUsername": "huya1121",
-    "blogTitle": "Laziji",
+    "blogTitle": "Huyal",
     "blogDescribe": "欢迎来到Huyal的个人博客。",
     "htmlTitle": "Huyal的博客",
     "fontColor": "#ffffff",
